# Basalt

./: .gitignore  MEMORY.md  Makefile  Readme.md  Readme.txt  SECURITY.md  TODO-slot-removal.md  build-universal.sh
Basalt/: Credits.rtf  Info.plist  build.sh  project.yml
Basalt/App/: BackupHeaderSheet.swift  BasaltApp.swift  ChangePasswordSheet.swift  CreateVolumeSheet.swift  MainWindow.swift  MountSheet.swift  PasswordView.swift  PreferencesManager.swift  PreferencesView.swift  RestoreHeaderSheet.swift  VolumeManager.swift
Basalt/Bridge/: Basalt-Bridging-Header.h  TCBridgePrefix.h  TCCocoaCallback.h  TCCocoaCallback.mm  TCCoreBridge.h  TCCoreBridge.mm
CLI/: CLI.make  CLICallback.cpp  CLICallback.h  getopt.h  main.cpp
Common/: Argon2Kdf.c  Argon2Kdf.h  BootEncryption.cpp  Pkcs5.c  SecurityToken.cpp  SecurityToken.h  Tcdefs.h
Core/: Core.h  Core.make  CoreBase.cpp  CoreBase.h  CoreException.cpp  CorePublicAPI.h  HostDevice.cpp  MountOptions.cpp  MountOptions.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  VolumeCreator.cpp  VolumeCreator.h  VolumeOperations.cpp  VolumeOperations.h
Core/Unix/: CoreService.cpp  CoreService.h  CoreServiceProxy.h  CoreServiceRequest.cpp  CoreServiceResponse.cpp  CoreUnix.cpp  CoreUnix.h  MountedFilesystem.h
Core/Windows/: CoreWindows.cpp  CoreWindows.h
Crypto/: Aes_hw_cpu_arm.c  Twofish.h
Crypto/Argon2/: argon2.h  blake2-impl.h  blake2b.c  core.c  core.h  thread.c  thread.h
DarwinFUSE/: test_nfs  test_nfs.c  test_server_only  test_server_only.c
DarwinFUSE/src/: darwinfuse_internal.h  fuse_context.h  nfs4_ops.h  nfs4_server.h  rpc.c  rpc.h
Driver/Fuse/: Driver.make  FuseService.cpp  FuseService.h  FuseServiceWindows.cpp
LamarckFUSE/: CMakeLists.txt
LamarckFUSE/include/: fuse.h
LamarckFUSE/src/: fuse_context.h  iscsi_pdu.c  iscsi_pdu.h  iscsi_scsi.c  iscsi_scsi.h  iscsi_target.c  iscsi_target.h  lamarckfuse.c  lamarckfuse_internal.h  nfs4_ops.c  nfs4_ops.h  nfs4_server.c  nfs4_server.h  nfs4_xdr.c  nfs4_xdr.h  platform_compat.h  rpc.c  rpc.h
Platform/: Buffer.cpp  Buffer.h  Event.cpp  File.h  FileCommon.cpp  FileStream.h  FilesystemPath.h  Memory.cpp  Memory.h  MemoryStream.cpp  Mutex.h  Platform.h  PlatformBase.h  PlatformTest.cpp  Serializable.h  Serializer.cpp  SerializerFactory.cpp  SharedPtr.h  Stream.h  StringConverter.cpp  StringConverter.h  TextReader.cpp  Time.h  User.h
TrueCryptMac/: Info.plist  build.sh  project.yml
Volume/: Cipher.cpp  Cipher.h  EncryptionAlgorithm.cpp  EncryptionMode.cpp  EncryptionMode.h  EncryptionModeCBC.cpp  EncryptionModeCBC.h  EncryptionModeLRW.cpp  EncryptionModeXTS.cpp  EncryptionModeXTS.h  EncryptionTest.cpp  EncryptionTest.h  EncryptionThreadPool.cpp  EncryptionThreadPool.h  Hash.cpp  Hash.h  Keyfile.cpp  Pkcs5Kdf.cpp  Pkcs5Kdf.h  Volume.cpp  Volume.make  VolumeException.cpp  VolumeHeader.cpp  VolumeHeader.h  VolumeInfo.cpp  VolumeLayout.cpp  VolumeLayout.h  VolumePassword.cpp  VolumeSlot.h
(+135 files in other folders)
